[package]
name = "dropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
directories = "5.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.44"
wmctrl = "0.1.8"
