[package]
name = "topdrop"
version = "0.2.0"
edition = "2021"

license = "MIT"
authors = ["Daniel O'Brien <dob9601@gmail.com>"]
description = "A Rust implementation of a dropdown window manager, similar to that of tdrop"
repository = "https://github.com/dob9601/topdrop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
directories = "5.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_yaml = "0.9.25"
strum = { version = "0.25.0", features = ["derive"] }
